# xrdaggregatingn2n

./: .gitignore  Makefile.am  Makefile.in  README.md  XrdAggregatingName2Name.cc  build_rpm  configure  configure.ac  create_rpm  create_targz  make_rpms  publish.sh  xrootd-aggregatingname2name.spec
